update workflow yml for SHOW_SPARC_DASHBOARD

--- a/.github/workflows/pull_request_cypress.yml
+++ b/.github/workflows/pull_request_cypress.yml
@@ -41,6 +41,7 @@ env:
   SHOW_LOGIN_FEATURE: ${{ secrets.SHOW_LOGIN_FEATURE }}
   SHOW_METRICS: ${{ secrets.SHOW_METRICS }}
   SHOW_OSPARC_TAB: ${{ secrets.SHOW_OSPARC_TAB }}
+  SHOW_SPARC_DASHBOARD: ${{ secrets.SHOW_SPARC_DASHBOARD }}
   SHOW_TIMESERIES_VIEWER: ${{ secrets.SHOW_TIMESERIES_VIEWER }}
   SPARC_PORTAL_USER_ID: ${{ secrets.SPARC_PORTAL_USER_ID }}
   SPARC_PORTAL_USER_SECRET: ${{ secrets.SPARC_PORTAL_USER_SECRET }}
