update to add   DASHBOARD_FLATMAP_API: secrets.DASHBOARD_FLATMAP_API to yml and nuxt

--- a/.github/workflows/pull_request_cypress.yml
+++ b/.github/workflows/pull_request_cypress.yml
@@ -28,6 +28,7 @@ env:
   DEPLOY_ENV: ${{ secrets.DEPLOY_ENV }}
   DISABLE_REDIRECT_SSL: ${{ secrets.DISABLE_REDIRECT_SSL }}
   FLATMAP_API_HOST: ${{ secrets.FLATMAP_API_HOST }}
+  DASHBOARD_FLATMAP_API: ${{ secrets.DASHBOARD_FLATMAP_API}}
   LOGIN_API_URL: ${{ secrets.LOGIN_API_URL }}
   NODE_ENV: ${{ secrets.NODE_ENV }}
   NPM_CONFIG_PRODUCTION: ${{ secrets.NPM_CONFIG_PRODUCTION }}
