--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "semver": "^7.7.3"
   },
   "dependencies": {
-    "@abi-software/mapintegratedvuer": "1.16.1-beta.0",
+    "@abi-software/mapintegratedvuer": "1.16.1",
     "@abi-software/plotcomponents": "^0.2.4",
     "@abi-software/plotdatahelpers": "^0.1.2",
     "@abi-software/simulationvuer": "3.0.9",
@@ -66,7 +66,7 @@
     "string-width": "4.2.3",
     "mlly": "1.4.0",
     "vue": "3.4.21",
-    "@abi-software/flatmapvuer": "1.12.1"
+    "@abi-software/flatmapvuer": "1.12.2"
   },
   "engines": {
     "node": "18.17.1"
