--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nuxtjs/sitemap": "^5.1.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
+    "@pennsieve-viz/micro-ct": "1.0.2",
     "algoliasearch": "^4.19.1",
     "aws-amplify": "^5.3.10",
     "axios": "^1.5.0",
@@ -66,7 +67,17 @@
     "string-width": "4.2.3",
     "mlly": "1.4.0",
     "vue": "3.4.21",
-    "@abi-software/flatmapvuer": "1.12.2"
+    "@abi-software/flatmapvuer": "1.12.2",
+    "@deck.gl/core": "9.1.8",
+    "@deck.gl/extensions": "9.1.8",
+    "@deck.gl/geo-layers": "9.1.8",
+    "@deck.gl/layers": "9.1.8",
+    "@deck.gl/mesh-layers": "9.1.8",
+    "@luma.gl/constants": "9.1.7",
+    "@luma.gl/core": "9.1.7",
+    "@luma.gl/engine": "9.1.7",
+    "@luma.gl/shadertools": "9.1.7",
+    "@luma.gl/webgl": "9.1.7"
   },
   "engines": {
     "node": "18.17.1"
