Increase max old space with build command.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-app",
   "private": false,
   "scripts": {
-    "build": "nuxt build",
+    "build": "NODE_OPTIONS=\"--max-old-space-size=4096\" nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
